fixing z-index

--- a/src/components/css/popup-bar.scss
+++ b/src/components/css/popup-bar.scss
@@ -26,7 +26,7 @@
     font-size: 16pt;
     background: $bg-sec-color;
     color: $text-color;
-    z-index: 2;
+    z-index: 1000;
 
     .bar-wrapper {
       width: 100%;
